# balatro-chess

./: Cargo.toml  Dockerfile  Jenkinsfile  nightly.dockerfile  stable.dockerfile
benches/: board_to_string.rs  make_unmake_capture.rs  make_unmake_no_capture.rs  search_depth_1.rs  search_depth_1_sliding_pieces.rs  search_depth_3.rs  search_depth_5.rs  sliding_pieces.rs  stepping_pieces.rs
src/: chess_engine.rs  main.rs
src/chess_engine/: bitboard.rs  board.rs  debug.rs  game.rs  moves.rs  pieces.rs  zobrist.rs
src/chess_engine/bitboard/: bitwise_traits.rs  move_gen.rs  search.rs
src/chess_engine/bitboard/move_gen/: bishop.rs  king.rs  knight.rs  pawn.rs  ply.rs  queen.rs  rook.rs
