[package]
name = "balatro-chess"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
rand = "0.9.0"
rand_chacha = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"

[lints.clippy]
type_complexity = "allow"

[profile.release]
debug = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_depth_1"
harness = false

[[bench]]
name = "search_depth_3"
harness = false

[[bench]]
name = "search_depth_5"
harness = false
